# RULens

./: .flake8  .gitattributes  .gitignore  .secrets.baseline  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
data/processed/FD001/: X.npy.dvc  scaler.joblib.dvc  y.npy.dvc
data/processed/FD002/: X.npy.dvc  scaler.joblib.dvc  y.npy.dvc
data/processed/FD003/: X.npy.dvc  scaler.joblib.dvc  y.npy.dvc
data/processed/FD004/: X.npy.dvc  scaler.joblib.dvc  y.npy.dvc
reports/: data_build_summary.json
src/: __init__.py
src/api/: __init__.py  app.py  schemas.py
src/causal/: __init__.py  double_ml.py
src/common/: __init__.py  config.py  exceptions.py  logger.py  seeding.py
src/conformal/: __init__.py  split_cp.py
src/data/: __init__.py  build.py  loaders.py  scaling.py
src/faithfulness/: __init__.py  patching.py
src/interp/: __init__.py  gallery.py
src/models/: __init__.py  baselines.py  chronos.py  hooks.py
src/sae/: __init__.py  architectures.py  training.py
src/ui/: dashboard.py
tests/: test_data.py  test_scaffold.py
