[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rulens"
version = "0.0.0"
description = "Mechanistic interpretability and calibrated uncertainty for time-series foundation models in industrial predictive maintenance."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Priyrajsinh Parmar" }]

# Runtime dependencies (kept in sync with requirements.txt).
# CI installs only the lightweight subset the current code imports
# (numpy, pyyaml, pydantic); the heavier model/training/serving stack is
# resolved on the GPU machines and pinned here for reproducibility.
dependencies = [
    "numpy==2.4.6",
    "pandas>=2.2,<3",
    "scikit-learn>=1.5,<2",
    "joblib>=1.4",
    "pyyaml==6.0.3",
    "pydantic==2.13.4",
    "torch>=2.4,<3",
    "transformers>=4.44",
    "chronos-forecasting>=1.5",
    "sae-lens>=4.0",
    "mapie>=0.9",
    "econml>=0.15",
    "mlflow>=2.16",
    "dvc>=3.55",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "streamlit>=1.38",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
# Mirrored into requirements-dev.txt.
dev = [
    "black==26.5.1",
    "isort==8.0.1",
    "flake8==7.3.0",
    "mypy==2.1.0",
    "bandit==1.9.4",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "types-PyYAML==6.0.12.20260518",
    "detect-secrets==1.5.0",
    "pip-audit==2.10.1",
    "interrogate==1.7.0",
    "radon==6.0.1",
]

[project.urls]
Homepage = "https://github.com/Priyrajsinh/RULens"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.interrogate]
fail-under = 80
ignore-init-method = true
ignore-magic = true
ignore-private = true
ignore-nested-functions = true
ignore-module = false
